# Bot-Plasma

./: .env  .replit  README.md  bot.py  pyproject.toml  replit.nix
cogs/: audit.py  automod.py  giveaway.py  help.py  moderator.py  owner.py  prefixes.py  setup.py  utils.py
cogs/Plugins/: plugin_help.py
config/: prefixes.json  token.json  version.json
config/data/: guildinfo.json
