[tool.poetry]
name = "bot-plasma"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]
readme = "README.md"
packages = [{include = "bot_plasma"}]

[tool.poetry.dependencies]
python = "^3.10"
discord = "2.3.2"
discord-py = "2.3.2"
js = "1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
